SWO working at least from ST-link

--- a/STM32/NUCLEO-L152RE/NUCLEO-L152RE-Blink-Serial/NUCLEO-L152RE-2.ioc
+++ b/STM32/NUCLEO-L152RE/NUCLEO-L152RE-Blink-Serial/NUCLEO-L152RE-2.ioc
@@ -98,30 +98,32 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.48MHZClocksFreq_Value=24000000
-RCC.AHBFreq_Value=4194000
-RCC.APB1Freq_Value=4194000
-RCC.APB1TimFreq_Value=4194000
-RCC.APB2Freq_Value=4194000
-RCC.APB2TimFreq_Value=4194000
-RCC.FCLKCortexFreq_Value=4194000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
+RCC.AHBFreq_Value=8000000
+RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=8000000
+RCC.APB2Freq_Value=8000000
+RCC.APB2TimFreq_Value=8000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=4194000
+RCC.HCLKFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,LCDFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSIClockRange,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,TimerFreq_Value,USBOutput,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,LCDFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSIClockRange,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USBOutput,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LCDFreq_Value=32768
 RCC.LSI_VALUE=37000
-RCC.MCOPinFreq_Value=4194000
+RCC.MCOPinFreq_Value=16000000
 RCC.MSIClockRange=RCC_MSIRANGE_6
 RCC.MSI_VALUE=4194000
 RCC.PLLCLKFreq_Value=24000000
-RCC.PWRFreq_Value=4194000
+RCC.PWRFreq_Value=16000000
 RCC.RTCClockSelectionVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=4194000
-RCC.TIMFreq_Value=4194000
-RCC.TimerFreq_Value=4194000
+RCC.SYSCLKFreq_VALUE=16000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
+RCC.TIMFreq_Value=8000000
+RCC.TimerFreq_Value=8000000
 RCC.USBOutput=48000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=48000000
